apps/newcloud/base/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud-app
  name: nextcloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-app
    spec:
      containers:
        - image: mariadb
          name: nextcloud-db
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --innodb-file-per-table=1
            - --skip-innodb-read-only-compressed
          resources: {}
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nextcloud-db-pvc
              subPath: db-storage
        - image: redis:alpine
          name: redis
          resources: {}
          ports:
            - containerPort: 6379
              protocol: TCP
        - image: nextcloud
          name: nextcloud-app
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-pvc
              subPath: html
            - mountPath: /var/www/html/data
              name: nextcloud-pvc
              subPath: data
      restartPolicy: Always
      volumes:
        - name: nextcloud-pvc
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/service/nextcloud
            readOnly: false
