apps/newcloud/base/collabora-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collabora
  name: collabora
type: ClusterIp
spec:
  ports:
    - name: http
      port: 8510
      targetPort: 9980
  selector:
    app: collabora
