apps/newcloud/base/nextcloud-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  labels:
    expose: "true"
    local: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`newcloud.steffenillium.de`)
    kind: Rule
    services:
    - name: nextcloud-service
      port: 80
